cmd/deployement/api/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trip-api
            port:
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: svc-userapi
            port:
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: svc-userprofil
            port:
              number: 80
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: svc-poi
            port:
              number: 80
      - path: /api/docs/poi
        pathType: Prefix
        backend:
          service:
            name: svc-poi
            port:
              number: 80
      - path: /swagger/docs/poi
        pathType: Prefix
        backend:
          service:
            name: svc-poi
            port:
              number: 80
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: svc-poi
            port:
              number: 80
